Move more build logic to buildSrc