@@ -20,17 +20,143 @@
 
 import com.google.gson.Gson
 import com.google.gson.GsonBuilder
-import com.google.gson.reflect.TypeToken
 import java.net.HttpURLConnection
 import java.net.URI
-import java.net.URL
 import java.util.Properties
 import java.util.zip.ZipFile
+import org.cadixdev.gradle.licenser.header.HeaderStyle
+import org.gradle.kotlin.dsl.maven
+import org.gradle.kotlin.dsl.repositories
+import org.gradle.kotlin.dsl.withType
+import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
+import org.gradle.accessors.dm.LibrariesForLibs
+import org.jetbrains.kotlin.gradle.dsl.JvmTarget
+import org.jetbrains.kotlin.gradle.dsl.KotlinVersion
+import org.jlleitschuh.gradle.ktlint.tasks.BaseKtLintCheckTask
 
-val jflex: Configuration by configurations.creating
-val jflexSkeleton: Configuration by configurations.creating
-val grammarKit: Configuration by configurations.creating
-val compileOnly by configurations
+plugins {
+    java
+    idea
+    id("org.jetbrains.kotlin.jvm")
+    id("org.jetbrains.intellij")
+    id("org.cadixdev.licenser")
+    id("org.jlleitschuh.gradle.ktlint")
+}
+
+java {
+    toolchain {
+        languageVersion.set(JavaLanguageVersion.of(17))
+    }
+}
+
+tasks.withType<JavaCompile>().configureEach {
+    options.encoding = "UTF-8"
+    options.compilerArgs = listOf("-proc:none")
+    options.release.set(17)
+}
+
+kotlin {
+    jvmToolchain {
+        languageVersion.set(JavaLanguageVersion.of(17))
+    }
+}
+
+tasks.withType<KotlinCompile>().configureEach {
+    compilerOptions {
+        jvmTarget = JvmTarget.JVM_17
+        languageVersion = KotlinVersion.KOTLIN_2_0
+        freeCompilerArgs = listOf("-Xjvm-default=all", "-Xjdk-release=17")
+        optIn.add("kotlin.contracts.ExperimentalContracts")
+    }
+    kotlinDaemonJvmArguments.add("-Xmx2G")
+}
+
+repositories {
+    maven("https://repo.denwav.dev/repository/maven-public/")
+    maven("https://maven.fabricmc.net/") {
+        content {
+            includeModule("net.fabricmc", "mapping-io")
+            includeModule("net.fabricmc", "fabric-loader")
+        }
+    }
+    mavenCentral()
+    maven("https://repo.spongepowered.org/maven/") {
+        content {
+            includeGroup("org.spongepowered")
+        }
+    }
+    maven("https://hub.spigotmc.org/nexus/content/repositories/snapshots/") {
+        content {
+            includeGroup("org.spigotmc")
+        }
+    }
+    maven("https://oss.sonatype.org/content/repositories/snapshots/") {
+        content {
+            includeGroup("net.md-5")
+        }
+    }
+}
+
+val libs = the<LibrariesForLibs>()
+dependencies {
+    implementation(libs.kotlin.stdlib)
+    implementation(libs.kotlin.reflect)
+    implementation(libs.bundles.coroutines)
+
+    testImplementation(libs.junit.api)
+    testRuntimeOnly(libs.junit.entine)
+    testRuntimeOnly(libs.junit.platform.launcher)
+}
+
+intellij {
+    // IntelliJ IDEA dependency
+    version.set(libs.versions.intellij.ide)
+
+    updateSinceUntilBuild.set(true)
+    downloadSources.set(providers.gradleProperty("downloadIdeaSources").map { it.toBoolean() })
+
+    sandboxDir.set(layout.projectDirectory.dir(".sandbox").toString())
+}
+
+license {
+    header.set(resources.text.fromFile(rootProject.layout.projectDirectory.file("copyright.txt")))
+    style["flex"] = HeaderStyle.BLOCK_COMMENT.format
+    style["bnf"] = HeaderStyle.BLOCK_COMMENT.format
+
+    val endings = listOf("java", "kt", "kts", "groovy", "gradle.kts", "xml", "properties", "html", "flex", "bnf")
+    include(endings.map { "**/*.$it" })
+}
+
+idea {
+    module {
+        excludeDirs.add(file(intellij.sandboxDir.get()))
+    }
+}
+
+tasks.withType<BaseKtLintCheckTask>().configureEach {
+    workerMaxHeapSize = "512m"
+}
+
+tasks.runIde {
+    maxHeapSize = "2G"
+    jvmArgs("--add-exports=java.base/jdk.internal.vm=ALL-UNNAMED")
+}
+
+tasks.register("cleanSandbox", Delete::class) {
+    group = "intellij"
+    description = "Deletes the sandbox directory."
+    delete(layout.projectDirectory.dir(".sandbox"))
+}
+
+tasks.test {
+    useJUnitPlatform()
+}
+
+tasks.register("format") {
+    group = "minecraft"
+    description = "Formats source code according to project style"
+    dependsOn(tasks.licenseFormat, tasks.ktlintFormat)
+}
 
 // Analyze dependencies
 val fileName = ".gradle/intellij-deps.json"
@@ -107,6 +233,7 @@ tasks.register("resolveIntellijLibSources") {
             }.toList()
 
         val depList = DepList(ideaVersion, ideaVersionName, deps.sortedWith(compareBy<Dep> { it.groupId }.thenBy { it.artifactId }))
+        jsonFile.parentFile.mkdirs()
         jsonFile.bufferedWriter().use { writer ->
             GsonBuilder().setPrettyPrinting().create().toJson(depList, writer)
         }
